--- a/lakshana.html
+++ b/lakshana.html
@@ -1,216 +1,108 @@
-/* Reset */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lakshana- Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Lakshana - Web Developer</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: black;
-    background-color: black;
-}
+    <section id="hero">
+        <div class="hero-content">
+            <h2>Hello, I'm <span>Lakshana </span></h2>
+            <p>I build  responsive websites. Check out my work below.</p>
+            <a href="#projects" class="btn">View My Work</a>
+        </div>
+    </section>
 
-.container {
-    width: 90%;
-    margin: 0 auto;
-    max-width: 1200px;
-}
+    <section id="about">
+        <div class="container about-section">
+            <h2>About Me</h2>
+            <div class="about-content">
+                
+                <div class="about-text">
+                    <p>I'm a beginner web developer passionate about building clean, efficient, and responsive websites. My work focuses on using modern technologies like HTML, CSS, and JavaScript to create user-friendly web experiences.</p>
+                    <p>Currently, I’m learning more advanced concepts and technologies to further improve my skills and take on more complex projects.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-/* Header */
-header {
-    background-color: black;
-    padding: 20px 0;
-    color: fuchsia;
-    text-align: center;
-}
+    <section id="projects">
+        <div class="container">
+            <h2>Projects</h2>
+            <div class="project-card">
+                <h3>Project 1 - Simple Website</h3>
+                <p>A basic HTML and CSS website showcasing my development skills.</p>
+                <a href="#" class="btn">View Project</a>
+            </div>
+            <div class="project-card">
+                <h3>Project 2 - Calculator</h3>
+                <p>A simple calculator built using JavaScript to perform basic arithmetic functions.</p>
+                <a href="#" class="btn">View Project</a>
+            </div>
+        </div>
+    </section>
 
-nav ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    margin-top: 10px;
-}
+    <section id="skills">
+        <div class="container">
+            <h2>Skills</h2>
+            <div class="skills-grid">
+                <div class="skill">
+                    <h3>HTML</h3>
+                    <p>Building the structure of websites using semantic HTML.</p>
+                </div>
+                <div class="skill">
+                    <h3>CSS</h3>
+                    <p>Styling websites with modern CSS, including flexbox and grid layouts.</p>
+                </div>
+                <div class="skill">
+                    <h3>JavaScript</h3>
+                    <p>Adding interactivity and dynamic elements to web pages.</p>
+                </div>
+                <div class="skill">
+                    <h3>Python</h3>
+                    <p>Working with Python to create backend systems and simple automation scripts.</p>
+                </div>
+                <div class="skill">
+                    <h3>Python</h3>
+                    <p>Working with Python to create backend systems and simple automation scripts.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
-nav ul li {
-    margin: 0 15px;
-}
+    <section id="contact">
+        <div class="container">
+            <h2>Contact Me</h2>
+            <form action="#">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit" class="btn">Send Message</button>
+            </form>
+        </div>
+    </section>
 
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: 500;
-}
-
-/* Hero Section */
-#hero {
-    background-color: #eee;
-    padding: 100px 0;
-    text-align: center;
-}
-
-.hero-content h2 {
-    font-size: 36px;
-    margin-bottom: 15px;
-}
-
-.hero-content h2 span {
-    color: #e74c3c;
-}
-
-.hero-content p {
-    font-size: 18px;
-    margin-bottom: 20px;
-}
-
-.hero-content .btn {
-    background-color: #e74c3c;
-    color:#eee;
-    padding: 10px 25px;
-    text-decoration: none;
-}
-
-/* About Section */
-#about {
-    padding: 60px 0;
-    background-color: #f0f0f0;
-    text-align: center;
-}
-
-.about-section {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.about-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.about-img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin-right: 30px;
-    object-fit: cover;
-    border: 5px solid #e74c3c;
-}
-
-.about-text {
-    max-width: 600px;
-    text-align: left;
-}
-
-.about-text p {
-    margin-bottom: 15px;
-}
-
-/* Projects Section */
-#projects {
-    padding: 60px 0;
-    background-color: orchid;
-}
-
-.project-card {
-    background-color: #eee;
-    padding: 20px;
-    margin-bottom: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: left;
-}
-
-.project-card h3 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-.project-card p {
-    font-size: 16px;
-}
-
-.project-card .btn {
-    display: inline-block;
-    margin-top: 10px;
-    background-color: #e74c3c;
-    color: #fff;
-    padding: 8px 16px;
-    text-decoration: none;
-    border-radius: 4px;
-}
-
-.project-card .btn:hover {
-    background-color: #c0392b;
-}
-
-/* Skills Section */
-#skills {
-    padding: 60px 0;
-    background-color: #f9f9f9;
-}
-
-.skills-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-    gap: 20px;
-    margin-top: 30px;
-}
-
-.skill {
-    background-color: darkmagenta;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.skill h3 {
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-
-.skill p {
-    font-size: 14px;
-    margin: 0;
-}
-
-/* Contact Section */
-#contact {
-    padding: 60px 0;
-    text-align: center;
-}
-
-#contact form {
-    max-width: 500px;
-    margin: 0 auto;
-}
-
-#contact input, #contact textarea {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-}
-
-#contact button {
-    padding: 10px 20px;
-    background-color: #e74c3c;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-#contact button:hover {
-    background-color: #c0392b;
-}
-
-/* Footer */
-footer {
-    background-color: mediumorchid;
-    padding: 20px;
-    color: white;
-    text-align: center;
-}
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Lakhana. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
